fix: fix query params
